src/test/resources/private/typechecking/pass/this/this_06_multiple.jova
class Helper {
}

class A {
    private int a;
    private string b;
    private bool c;
    private Helper d;
    public int e;
    public string f;
    public bool g;
    public Helper h;

    private int func0() {
        a = 3;
        b = "b";
        c = true;
        d = new Helper;
        e = 4;
        f = "f";
        g = false;
        h = new Helper;

        return 0;
    }

    private int func2(int a, string b, bool c, Helper d,
                     int e, string f, bool g, Helper h) {
        this.a = 3;
        this.b = "b";
        this.c = true;
        this.d = new Helper;
        this.e = 4;
        this.f = "f";
        this.g = false;
        this.h = new Helper;

        this.a = a;
        this.b = b;
        this.c = c;
        this.d = d;
        this.e = e;
        this.f = f;
        this.g = g;
        this.h = h;

        a = this.a;
        b = this.b;
        c = this.c;
        d = this.d;
        e = this.e;
        f = this.f;
        g = this.g;
        h = this.h;

        return 0;
    }

    private int func3(int a0, string b0, bool c0, Helper d0,
                     int e0, string f0, bool g0, Helper h0) {

        int a;
        string b;
        bool c;
        Helper d;
        int e;
        string f;
        bool g;
        Helper h;

        a = 3;
        b = "b";
        c = true;
        d = new Helper;
        e = 4;
        f = "f";
        g = false;
        h = new Helper;

        a0 = a;
        b0 = b;
        c0 = c;
        d0 = d;
        e0 = e;
        f0 = f;
        g0 = g;
        h0 = h;

        this.a = a;
        this.b = b;
        this.c = c;
        this.d = d;
        this.e = e;
        this.f = f;
        this.g = g;
        this.h = h;

        a0 = this.a;
        b0 = this.b;
        c0 = this.c;
        d0 = this.d;
        e0 = this.e;
        f0 = this.f;
        g0 = this.g;
        h0 = this.h;

        this.a = a;
        this.b = b;
        this.c = c;
        this.d = d;
        this.e = e;
        this.f = f;
        this.g = g;
        this.h = h;

        return 0;
    }
}